--- a/ChatHouse/app/src/main/res/layout/activity_login.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,49 +9,74 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="250dp"
-        android:layout_marginLeft="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintVertical_bias="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Password"
+        app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/ErrorMessage"
-        android:text="Invalid Username or Password"
+        android:text=""
         android:textColor="@color/design_default_color_error">
 
     </TextView>
 
     <EditText
         android:id="@+id/Username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:layout_marginTop="300dp"
-        android:layout_marginLeft="50dp"
-        android:hint = "Username"/>
+        android:layout_width="350dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="250dp"
+        android:ems="10"
+        android:hint="Username"
+        android:inputType="textEmailAddress"
+        app:layout_constraintBottom_toTopOf="@+id/Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2" />
 
     <EditText
         android:id="@+id/Password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="350dp"
+        android:layout_height="60dp"
+        android:ems="10"
+        android:layout_marginTop="300dp"
+        android:hint="Password"
         android:inputType="textPassword"
-        android:layout_marginTop="350dp"
-        android:layout_marginLeft="50dp"
-        android:hint = "Password"/>
+        app:layout_constraintBottom_toTopOf="@id/Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.6" />
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/Signup"
+        android:layout_width="350dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="400dp"
         android:clickable="true"
-        android:layout_marginTop="410dp"
+        android:ems="10"
         android:text="You don't have an account? Sign up"
-        android:layout_marginLeft="80dp"
         android:textColorLink="@color/design_default_color_primary_dark"
-        >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintVertical_bias="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Password"
+        app:layout_constraintTop_toTopOf="parent">
 
     </TextView>
 
     <Button
         android:id="@+id/Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="120dp"
         android:text="Login"
-        android:layout_marginTop="450dp"
-        android:layout_marginLeft="120dp"
-        android:width="150dp"/>
-</RelativeLayout>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
