fix responsive UI

--- a/ChatHouse/app/src/main/res/layout/activity_sign_up.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_sign_up.xml
@@ -4,42 +4,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp"
+    android:paddingVertical="8dp"
+    android:paddingHorizontal="35dp"
     tools:context=".MainActivity">
 
     <EditText
         android:id="@+id/EmailInput"
-        android:layout_width="350dp"
+        android:layout_width="0dp"
         android:layout_height="60dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/submitBtn"
+        app:layout_constraintBottom_toTopOf="@+id/usernameInput"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3"/>
+        app:layout_constraintTop_toBottomOf="@+id/resultText" />
 
 
     <EditText
         android:id="@+id/passwordInput"
-        android:layout_width="350dp"
+        android:layout_width="0dp"
         android:layout_height="60dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/submitBtn"
+        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordInput"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.6"/>
+        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />
 
     <EditText
         android:id="@+id/confirmPasswordInput"
-        android:layout_width="350dp"
+        android:layout_width="0dp"
         android:layout_height="60dp"
+        android:layout_marginBottom="64dp"
         android:ems="10"
         android:hint="Confirm Password"
         android:inputType="textPassword"
@@ -47,38 +46,38 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.75"/>
+        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />
 
     <EditText
         android:id="@+id/usernameInput"
-        android:layout_width="350dp"
+        android:layout_width="0dp"
         android:layout_height="60dp"
         android:hint="Username"
-        app:layout_constraintBottom_toTopOf="@+id/submitBtn"
+        app:layout_constraintBottom_toTopOf="@+id/passwordInput"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.45
-" />
+        app:layout_constraintTop_toBottomOf="@+id/EmailInput" />
 
     <Button
         android:id="@+id/submitBtn"
-        android:layout_width="350dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="148dp"
+        android:layout_marginBottom="64dp"
         android:text="sign up"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInput" />
 
     <TextView
         android:id="@+id/resultText"
-        android:layout_width="350dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
+        android:layout_marginTop="32dp"
         android:text=""
+        android:textSize="15dp"
         app:layout_constraintBottom_toTopOf="@+id/EmailInput"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
