--- a/ChatHouse/app/src/main/res/values/colors.xml
+++ b/ChatHouse/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light">#ddd6d1</color>
+    <color name="almostblack">#ddd6d1</color>
+    <color name="almostpink">#826263</color>
+    <color name="gray">#646c6c</color>
+    <color name="almostorange">#9c7463</color>
 </resources>
