--- a/ChatHouse/app/src/main/res/layout/activity_login.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_login.xml
@@ -12,39 +12,37 @@
 >
 
     <TextView
-        android:fontFamily="cursive"
         android:id="@+id/Logo"
-        android:textColor="@color/almostorange"
-        android:layout_marginTop="100dp"
-        android:text="GoNuts"
-        android:textSize="50dp"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="60dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="20dp"
         android:ems="10"
+        android:fontFamily="cursive"
+        android:gravity="center"
+        android:text="GoNuts"
+        android:textColor="@color/almostorange"
+        android:textColorLink="@color/black"
+        android:textSize="50dp"
         app:layout_constraintBottom_toTopOf="@+id/ErrorMessage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.508"
-        android:paddingLeft="100dp"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
     </TextView>
 
     <TextView
         android:id="@+id/ErrorMessage"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:ems="10"
         android:text=""
         android:textColor="@color/design_default_color_error"
-        android:textSize="20dp"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:ems="10"
-
         app:layout_constraintBottom_toTopOf="@+id/Username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/Logo"
-        android:layout_marginTop="10dp">
+        app:layout_constraintTop_toBottomOf="@id/Logo">
 
     </TextView>
 
@@ -52,66 +50,58 @@
         android:id="@+id/Username"
         android:layout_width="0dp"
         android:layout_height="60dp"
+        android:backgroundTint="@color/almostorange"
         android:ems="10"
-        android:hint="Username"
-        android:inputType="textEmailAddress"
         android:fontFamily="sans-serif-condensed-light"
+        android:hint="Email or Username"
+        android:inputType="textEmailAddress"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/Password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/Logo"
-        android:backgroundTint="@color/almostorange"
-        android:layout_marginTop="70dp"
-         />
+        app:layout_constraintTop_toBottomOf="@+id/ErrorMessage" />
 
     <EditText
         android:id="@+id/Password"
         android:layout_width="0dp"
         android:layout_height="60dp"
+        android:backgroundTint="@color/almostorange"
         android:ems="10"
-        android:hint="Password"
         android:fontFamily="sans-serif-condensed-light"
-        android:textColor="@color/black"
+        android:hint="Password"
         android:inputType="textPassword"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/Signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/Username"
-        android:backgroundTint="@color/almostorange"
-        android:layout_marginTop="10dp"/>
+        app:layout_constraintTop_toBottomOf="@id/Username" />
 
     <TextView
         android:id="@+id/Signup"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         android:clickable="true"
-        android:ems="10"
+        android:fontFamily="sans-serif-condensed-light"
         android:text="You don't have an account? Sign up"
         android:textColorLink="@color/black"
-        android:fontFamily="sans-serif-condensed-light"
         app:layout_constraintBottom_toTopOf="@+id/Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/Password"
-        android:layout_marginBottom="40dp"
-        android:layout_marginTop="20dp"
-
-        >
-
-    </TextView>
+        app:layout_constraintTop_toBottomOf="@id/Password" />
 
     <Button
         android:id="@+id/Button"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:text="Login"
-        android:fontFamily="sans-serif-condensed-light"
-        android:textColor="@color/black"
+        android:layout_marginBottom="128dp"
         android:backgroundTint="@color/almostorange"
-        app:layout_constraintBottom_toTopOf="parent"
+        android:fontFamily="sans-serif-condensed-light"
+        android:text="Login"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/Signup"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/Signup" />
 </androidx.constraintlayout.widget.ConstraintLayout>
