--- a/ChatHouse/app/src/main/res/layout/activity_profile_page.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_profile_page.xml
@@ -171,6 +171,7 @@
         android:layout_width="wrap_content"
         android:layout_height="2dp"
         android:background="@color/light"
+        android:id="@+id/LineBelow"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/Buttons"
         app:layout_constraintEnd_toEndOf="parent"
@@ -185,6 +186,15 @@
         app:layout_constraintHorizontal_bias="0.457"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Buttons">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/EachInterest"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Buttons">
+        </TextView>
 
     </HorizontalScrollView>
 
